--- a/payment.html
+++ b/payment.html
@@ -1,80 +1,146 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="utf-8" />
-<meta name="viewport" content="width=device-width,initial-scale=1" />
-<title>Dairy Farm Market — Payment</title>
-<style>
-:root{--green:#3fa43f;--dark:#274c27;--muted:#eaf9ea;--card:#fff}
-*{box-sizing:border-box}
-body{margin:0;font-family:Inter,Arial;background:var(--muted);color:var(--dark)}
-header{background:var(--green);color:white;padding:16px 20px;display:flex;align-items:center;justify-content:space-between}
-.brand{font-size:22px;font-weight:800}
-.container{max-width:900px;margin:34px auto;background:white;padding:30px;border-radius:16px;box-shadow:0 10px 28px rgba(0,0,0,0.08)}
-h2{text-align:center;margin:0 0 20px;font-size:26px}
-.cart-item{display:flex;justify-content:space-between;background:#f7fff7;padding:14px;border-radius:12px;margin-bottom:12px;border:1px solid #d8f0d8}
-.cart-item div{font-size:16px}
-.total{font-size:22px;font-weight:800;color:var(--green);text-align:right;margin-top:20px}
-form{margin-top:30px}
-label{font-weight:700;display:block;margin-top:14px}
-input,select{width:100%;padding:12px;margin-top:6px;border-radius:10px;border:1px solid #ccc;font-size:15px}
-.btn{width:100%;margin-top:26px;padding:14px;background:var(--green);color:white;font-size:18px;border:none;border-radius:12px;font-weight:700;cursor:pointer}
-.btn:hover{background:#2f7a2f}
-.empty{text-align:center;padding:30px;font-size:18px;color:#3a6a3a}
-</style>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Dairy Farm – Payment</title>
+  <style>
+    body {
+      margin: 0;
+      font-family: 'Poppins', sans-serif;
+      background: #f0fff0;
+      color: #2f6d2f;
+    }
+
+    header {
+      background: linear-gradient(#2f8f2f, #1f6d1f);
+      padding: 20px;
+      text-align: center;
+      font-size: 32px;
+      color: white;
+      font-weight: bold;
+    }
+
+    .container {
+      max-width: 650px;
+      margin: 40px auto;
+      background: white;
+      padding: 30px;
+      border-radius: 18px;
+      box-shadow: 0 0 20px rgba(0,0,0,0.1);
+      animation: fadeIn 0.8s ease;
+    }
+
+    @keyframes fadeIn {
+      from { opacity: 0; transform: translateY(20px); }
+      to { opacity: 1; transform: translateY(0); }
+    }
+
+    h2 {
+      margin-top: 0;
+      font-size: 26px;
+      text-align: center;
+    }
+
+    .summary-box {
+      background: #e8ffe8;
+      padding: 20px;
+      border-radius: 12px;
+      margin-bottom: 25px;
+    }
+
+    .summary-box div {
+      font-size: 18px;
+      margin-bottom: 8px;
+    }
+
+    label {
+      font-size: 18px;
+      margin-bottom: 6px;
+      display: block;
+    }
+
+    input {
+      width: 100%;
+      padding: 14px;
+      border-radius: 10px;
+      border: 2px solid #2f8f2f;
+      margin-bottom: 18px;
+      font-size: 17px;
+    }
+
+    button {
+      width: 100%;
+      padding: 14px 0;
+      border: none;
+      background: #2f8f2f;
+      color: white;
+      font-size: 20px;
+      border-radius: 10px;
+      cursor: pointer;
+      transition: 0.3s;
+    }
+
+    button:hover {
+      background: #256d25;
+    }
+
+    .product-img {
+      width: 80px;
+      height: 80px;
+      object-fit: contain;
+      display: block;
+      margin: 0 auto 10px auto;
+    }
+  </style>
 </head>
 <body>
-<header>
-  <div class="brand">Dairy Farm — Checkout</div>
-  <a href="product.html" style="color:white;text-decoration:none;font-weight:600;font-size:16px">Back to Products</a>
-</header>
+
+<header>Checkout – Dairy Farm</header>
 
 <div class="container">
-  <h2>Your Cart</h2>
-  <div id="cartList"></div>
-  <div class="total" id="total"></div>
+  <h2>Order Summary</h2>
+  <div class="summary-box">
+    <img id="prodImg" class="product-img" src="" alt="Product">
+    <div><strong>Product:</strong> <span id="prodName"></span></div>
+    <div><strong>Price:</strong> <span id="prodPrice"></span></div>
+  </div>
 
-  <form id="payForm" action="thankyou.html">
-    <label>Full Name</label>
-    <input required placeholder="Enter your name" />
+  <h2>Enter Your Details</h2>
+  <label>Name</label>
+  <input type="text" id="custName" placeholder="Enter your name" />
 
-    <label>Phone Number</label>
-    <input required placeholder="Enter mobile number" />
+  <label>Address</label>
+  <input type="text" id="custAddress" placeholder="Delivery address" />
 
-    <label>Address</label>
-    <input required placeholder="Enter delivery address" />
+  <label>Phone Number</label>
+  <input type="text" id="custPhone" placeholder="10-digit mobile number" />
 
-    <label>Payment Method</label>
-    <select required>
-      <option value="">Choose payment method</option>
-      <option>Cash on Delivery</option>
-      <option>UPI</option>
-      <option>Card Payment</option>
-    </select>
-
-    <button class="btn">Place Order</button>
-  </form>
+  <button onclick="placeOrder()">Place Order</button>
 </div>
 
 <script>
-function getCart(){return JSON.parse(localStorage.getItem('df_cart')||'[]');}
-function renderCart(){
-  const cart=getCart();
-  const list=document.getElementById('cartList');
-  const total=document.getElementById('total');
-  list.innerHTML="";
-  if(cart.length===0){ list.innerHTML='<div class="empty">Your cart is empty.</div>'; total.textContent=''; return; }
-  let sum=0;
-  cart.forEach(item=>{
-    sum+=item.price*item.qty;
-    const div=document.createElement('div');
-    div.className='cart-item';
-    div.innerHTML=`<div>${item.name} (x${item.qty})</div><div>₹${item.price*item.qty}</div>`;
-    list.appendChild(div);
-  });
-  total.textContent='Total: ₹'+sum;
+let product = JSON.parse(localStorage.getItem('selectedProduct'));
+
+if(product){
+  document.getElementById('prodName').innerText = product.name;
+  document.getElementById('prodPrice').innerText = product.price;
+  document.getElementById('prodImg').src = product.img || 'https://www.svgrepo.com/show/522409/milk.svg';
 }
-renderCart();
+
+function placeOrder(){
+  const name = document.getElementById('custName').value.trim();
+  const address = document.getElementById('custAddress').value.trim();
+  const phone = document.getElementById('custPhone').value.trim();
+
+  if(name === '' || address === '' || phone === ''){
+    alert('Please fill out all fields');
+    return;
+  }
+
+  localStorage.setItem('orderDetails', JSON.stringify({ name, address, phone, product }));
+  window.location.href = 'thankyou.html';
+}
 </script>
 
 </body>
