--- a/thankyou.html
+++ b/thankyou.html
@@ -3,67 +3,109 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Thank You - Dairy Farm</title>
+  <title>Order Successful – Dairy Farm</title>
   <style>
     body {
       margin: 0;
-      font-family: Arial, sans-serif;
-      background: #e8ffe8;
+      font-family: 'Poppins', sans-serif;
+      background: #f0fff0;
       display: flex;
       justify-content: center;
       align-items: center;
       height: 100vh;
-      text-align: center;
       color: #2f6d2f;
     }
-    .thank-box {
-      background: #ffffff;
+
+    .box {
+      background: white;
+      width: 90%;
+      max-width: 480px;
       padding: 40px;
       border-radius: 20px;
-      box-shadow: 0 0 25px rgba(0, 0, 0, 0.1);
-      max-width: 500px;
-      animation: pop 0.8s ease;
+      text-align: center;
+      box-shadow: 0 0 25px rgba(0,0,0,0.12);
+      animation: pop 0.7s ease;
     }
+
     @keyframes pop {
-      0% { transform: scale(0.5); opacity: 0; }
-      100% { transform: scale(1); opacity: 1; }
+      from { opacity: 0; transform: scale(0.6) translateY(20px); }
+      to { opacity: 1; transform: scale(1) translateY(0); }
     }
-    .thank-box img {
+
+    .icon {
       width: 120px;
       margin-bottom: 20px;
     }
+
     h1 {
       font-size: 32px;
-      margin-bottom: 10px;
+      margin-bottom: 8px;
     }
+
     p {
       font-size: 18px;
-      margin-bottom: 20px;
+      margin-bottom: 15px;
     }
+
+    .details-box {
+      background: #e8ffe8;
+      padding: 18px;
+      border-radius: 12px;
+      margin-bottom: 20px;
+      text-align: left;
+      font-size: 17px;
+    }
+
+    .details-box div {
+      margin-bottom: 6px;
+    }
+
     a {
-      text-decoration: none;
+      display: inline-block;
       background: #2f8f2f;
-      color: white;
       padding: 12px 22px;
+      color: white;
+      text-decoration: none;
       border-radius: 10px;
       font-size: 18px;
       transition: 0.3s;
     }
+
     a:hover {
       background: #256d25;
     }
   </style>
 </head>
 <body>
-  <div class="thank-box">
 
-    <!-- Animated SVG -->
-    <img src="https://www.svgrepo.com/show/484284/verified-check-circle.svg" alt="Success" />
+<div class="box">
+  <img class="icon" src="https://www.svgrepo.com/show/484284/verified-check-circle.svg" alt="Success" />
 
-    <h1>Thank You!</h1>
-    <p>Your dairy order has been successfully placed.<br>We will deliver fresh farm products shortly.</p>
+  <h1>Order Confirmed!</h1>
+  <p>Thank you for shopping with us.<br>Your fresh dairy products are on the way!</p>
 
-    <a href="index.html">Back to Home</a>
+  <div class="details-box">
+    <div><strong>Customer:</strong> <span id="custName"></span></div>
+    <div><strong>Address:</strong> <span id="custAddress"></span></div>
+    <div><strong>Phone:</strong> <span id="custPhone"></span></div>
+    <div><strong>Product:</strong> <span id="prodName"></span></div>
+    <div><strong>Price:</strong> <span id="prodPrice"></span></div>
   </div>
+
+  <a href="index.html">Back to Home</a>
+</div>
+
+<script>
+let details = JSON.parse(localStorage.getItem('orderDetails'));
+
+if(details){
+  document.getElementById('custName').innerText = details.name;
+  document.getElementById('custAddress').innerText = details.address;
+  document.getElementById('custPhone').innerText = details.phone;
+  document.getElementById('prodName').innerText = details.product.name;
+  document.getElementById('prodPrice').innerText = details.product.price;
+}
+</script>
+
 </body>
 </html>
